--- a/lang/pl/pl.json
+++ b/lang/pl/pl.json
@@ -25,5 +25,6 @@
     "Creating note": "Utwórz notatke",
     "Description is" : "Opis to",
     "add multiple lines" : "Dodaj wiele linii",
-    "Description" : "Opis"
+    "Description" : "Opis",
+    "Edit dir" : "Edytuj katalog"
 }
